2001-06-01  Richard Frith-Macdonald  <rfm@gnu.uk>

	* Source/NSZone.m: NSZonefromPointer() check for empty zones
	list before locking ... optimisation suggested by
	Guenther Fuerthaller

2001-06-01  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSCalendarDate.m
	([-descriptionWithCalendarFormat:locale:]): Fixed %w (day of the
	week) to output a single digit number rather than a two digit one.

2001-05-31  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/NSObjCRuntime.h (GSLastErrorStr): Define new
	OS-independant strerror like function.
	* Source/GSFormat.m: Use it.
	* Source/GSTcpPort.m, Source/NSData.m, Source/NSDistributedLock.m,
	Source/NSFileManager.m, Source/NSPipe.m, Source/NSRunLoop.m, 
	Source/NSTask.m, Source/UnixFileHandle.m, Source/WindowsFileHandle.m:
	Likewise.
	* Source/NSObjCRuntime.m (GSLastErrorStr): New function
	(suggestion from "Michael Scheibler" <michael.scheibler@onevision.de>).

	* Headers/gnustep/base/behavior.h: Include objc-class.h on 
	NeXT_RUNTIME.
	* Headers/gnustep/base/objc-gnu2next.h: New inline functions.
	* Source/NSDistantObject.m (-selectorTypeForProxy): Simplify 
	NeXT_RUNTIME implementation.

2001-05-29  Adam Fedor  <fedor@gnu.org>

	* Version: 1.0.1

	* Resources/Languages/Dutch: New file (from Dennis Leeuw
	<dleeuw@made-it.com>).

2001-05-28  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/objc-gnu2next.h (class_is_class): New.
	* Source/NSAssertionHandler.m (-handleFailureInMethod...): Use
	OpenStep functions to get class/sel names.
	* Source/NSBundle.m (+initialize): NeXT_RUNTIME method to find
	classes.

2001-05-26  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSDebug.m (_NSPrintForDebugger): new function to support print
	object (po) cmd of gdb.

2001-05-25  Adam Fedor  <fedor@gnu.org>

	* configure.in: Use -lobjc with NeXT_RUNTIME.
	* Headers/gnustep/base/behavior.h: Include objc.h on NeXT_RUNTIME.

	* Source/GSFormat.m: Replace assert with NSCParameterAssert
